package com.sytoss.edu.elevator.bom;

public enum ButtonState {
    PRESSED, UNPRESSED
}
