package com.sytoss.edu.elevator.bom;

public class Cabin extends Entity {
}
