package com.sytoss.edu.elevator.bom;

public class LastFloor extends Floor {
    private int id;

    public LastFloor (int id) {
        this.id=id;
    }
}
